name:                plants-v2-zombies
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss >= 1.13.1.1 && < 1.14, reactive-banana, pqueue, unordered-containers
  exposed-modules:     Game, LevelParser, Parser, SetupParser, Types, Graphical
  other-modules:       Extent, GlossBanana, Pathfinding, Constants

executable plants-v2-zombies
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, plants-v2-zombies, directory, filepath, gloss-juicy

executable plants-v2-zombies-test
  hs-source-dirs:      src
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, plants-v2-zombies, directory, filepath